fix typos again

--- a/website/src/content/docs/llm/schema.mdx
+++ b/website/src/content/docs/llm/schema.mdx
@@ -140,7 +140,7 @@ Let's see how those [type tags](../validators/tags/#type-tags), comment tags and
   </Tabs.Tab>
 </Tabs>
 
-## Customziation
+## Customization
 
 If what you want is not just filling regular properties of LLM schema specification, but to adding custom properties into the JSON schema definition, you can do it through the `tags.TagBase.schema` property type or `tags.JsonSchemaPlugin` type. 
 
