--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -61,12 +61,12 @@ export function validate<T>(input: unknown): IValidation<T>; // detailed
 
 // JSON FUNCTIONS
 export namespace json {
-  export function application<T>(): IJsonApplication; // JSON schema
+  export function schema<T>(): IJsonSchemaUnit<T>; // JSON schema
   export function assertParse<T>(input: string): T; // type safe parser
   export function assertStringify<T>(input: T): string; // safe and faster
 }
 
-// LLM FUNCTION CALLING SCHEMA
+// AI FUNCTION CALLING SCHEMA
 export namespace llm {
   // collection of function calling schemas
   export function application<Class, Model>(): ILlmApplication<Class>;
@@ -76,7 +76,9 @@ export namespace llm {
   ): ILlmController<Model>; // +executor
   // structured output
   export function parameters<P, Model>(): ILlmSchema.IParameters<Model>; 
-  export function schema<T, Model>(): ILlmSchema<Model>; // type schema
+  export function schema<T, Model>(
+    $defs: Record<string, ILlmSchema<Model>>,
+  ): ILlmSchema<Model>; // type schema
 }
 
 // PROTOCOL BUFFER
