--- a/website/src/content/docs/llm/parameters.mdx
+++ b/website/src/content/docs/llm/parameters.mdx
@@ -16,37 +16,29 @@ import ValidatorSupportMatrixSnippet from "../../../snippets/ValidatorSupportMat
     <code>ILlmSchema</code>,
   ]}>
   <Tabs.Tab>
-```typescript filename="typia" showLineNumbers {20-25}
+```typescript filename="typia" showLineNumbers {11-14}
 export namespace llm {
   // LLM FUNCTION CALLING APPLICATION SCHEMA
   export function application<
     App extends Record<string, any>,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
+    Config extends Partial<ILlmSchema.IConfig> = {},
   >(
-    options?: Partial<Pick<ILlmApplication.IOptions<Model>, "separate">>,
-  ): ILlmApplication<Model>;
+    config?: Partial<Pick<ILlmApplication.IConfig, "separate">>,
+  ): ILlmApplication;
 
   // STRUCTURED OUTPUT
   export function parameters<
     Parameters extends Record<string, any>,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
-  >(): ILlmSchema.ModelParameters[Model];
+    Config extends Partial<ILlmSchema.IConfig> = {},
+  >(): ILlmSchema.IParameters;
 
   // TYPE SCHEMA
   export function schema<
     T,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
+    Config extends Partial<ILlmSchema.IConfig> = {},
   >(
-    ...$defs: Extract<
-      ILlmSchema.ModelSchema[Model],
-      { $ref: string }
-    > extends never
-      ? []
-      : [Record<string, ILlmSchema.ModelSchema[Model]>]
-  ): ILlmSchema.ModelSchema[Model];
+    $defs: Record<string, ILlmSchema>,
+  ): ILlmSchema;
 }
 ```
   </Tabs.Tab>
@@ -72,18 +64,9 @@ export namespace llm {
 
 Structured output schema of LLM (Large Language Model).
 
-`typia.llm.parameters<Parameters, Model>()` is a function generating structured output of LLM (Large Language Model) from a TypeScript object type. It is used to LLM function calling or structured output feature provided by OpenAI like LLM providers.
+`typia.llm.parameters<Parameters>()` is a function generating structured output of LLM (Large Language Model) from a TypeScript object type. It is used to LLM function calling or structured output feature provided by OpenAI like LLM providers.
 
-Return value type `ILlmSchema.IParameters` is a similar with the JSON schema definition's object type. However, its detailed specification becomes different by LLM provider model you've chosen. Here is the list of LLM schema definitions of each model. Determine one of them carefully reading the LLM schema definitions.
-
-  - Supported schemas
-    - [`IChatGptSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IChatGptSchema.ts): OpenAI ChatGPT
-    - [`IClaudeSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IClaudeSchema.ts): Anthropic Claude
-    - [`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts): Google Gemini
-    - [`ILlamaSchema`](https://github.com/samchon/openapi/blob/master/src/structures/ILlamaSchema.ts): Meta Llama
-  - Midldle layer schemas
-    - [`ILlmSchemaV3`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3.ts): middle layer based on OpenAPI v3.0 specification
-    - [`ILlmSchemaV3_1`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3_1.ts): middle layer based on OpenAPI v3.1 specification
+Return value type `ILlmSchema.IParameters` is a similar with the JSON schema definition's object type.
   
 <Callout type="info">
 **LLM Function Calling** and **Structured Output**
@@ -153,7 +136,7 @@ const main = async (): Promise<void> => {
         type: "json_schema",
         json_schema: {
           name: "member",
-          schema: typia.llm.parameters<IMember, "chatgpt">() as any,
+          schema: typia.llm.parameters<IMember>() as any,
         },
       },
     });
@@ -172,9 +155,9 @@ main().catch(console.error);
 > }
 > ```
 
-You can utilize the `typia.llm.parameters<Parameters, Model>()` function to generate structured output like above.
+You can utilize the `typia.llm.parameters<Parameters>()` function to generate structured output like above.
 
-Just configure output mode as JSON schema, and deliver the `typia.llm.parameters<Parameters, Model>()` function returned value to the LLM provider like OpenAI (ChatGPT). Then, the LLM provider will automatically transform the output conversation into a structured data format of the `Parameters` type.
+Just configure output mode as JSON schema, and deliver the `typia.llm.parameters<Parameters>()` function returned value to the LLM provider like OpenAI (ChatGPT). Then, the LLM provider will automatically transform the output conversation into a structured data format of the `Parameters` type.
 
 ## Validation Feedback
 
@@ -233,7 +216,7 @@ const step = async (
         type: "json_schema",
         json_schema: {
           name: "member",
-          schema: typia.llm.parameters<IMember, "chatgpt">() as any,
+          schema: typia.llm.parameters<IMember>() as any,
         },
       },
     });
@@ -275,9 +258,7 @@ For reference, the [`typia.validate<T>()`](/docs/validators/validate) function c
 
 <ValidatorSupportMatrixSnippet />
 
-Additionally, this validation feedback strategy is useful for some LLM providers do not supporting restriction properties of JSON schema like OpenAI ([`IChatGptSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IChatGptSchema.ts)) and Gemini ([`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts)). For example, OpenAI and Gemini do not support `format` property of JSON schema, so that cannot understand the `UUID` like type. Even though `typia.llm.application<App, Model>()` function is writing the restriction information to the `description` property of JSON schema, but LLM provider does not reflect it perfectly.
-
-Also, some LLM providers which have not specified the JSON schema version like Claude ([`IClaudeSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IClaudeSchema.ts)) and Llama ([`ILlamaSchema`](https://github.com/samchon/openapi/blob/master/src/structures/ILlamaSchema.ts)), they tend to fail a lot of function calling about the restriction properties. In fact, Llama does not support the structured output formally, so you have to detour it by prompt template, and its success rate is lower than others.
+Additionally, this validation feedback strategy is useful for some LLM providers do not supporting restriction properties of JSON schema. For example, some LLM providers do not support `format` property of JSON schema, so that cannot understand the `UUID` like type. Even though `typia.llm.application<App>()` function is writing the restriction information to the `description` property of JSON schema, but LLM provider does not reflect it perfectly.
 
 In that case, if you give validation feedback from `ILlmFunction.validate()` function to the LLM agent, the LLM agent will be able to understand the restriction information exactly and fill the arguments properly.
 
@@ -288,11 +269,11 @@ In that case, if you give validation feedback from `ILlmFunction.validate()` fun
 
 ## Restrictions
 
-`typia.llm.parameters<Parameters, Model>()` follows the same restrictions [`typia.llm.schema<T, Model>()`](./schema) function. Also, it has only one additional restriction; the keyworded argument.
+`typia.llm.parameters<Parameters>()` follows the same restrictions [`typia.llm.schema<T>()`](./schema) function. Also, it has only one additional restriction; the keyworded argument.
 
 In the LLM function calling and structured output, the parameters must be a keyworded object type with static keys without any dynamic keys. Also, the object type must not be nullable or optional.
 
-If you don't follow the LLM's keyworded arguments rule, `typia.llm.parameters<Parameters, Model>()` will throw compilation error like below.
+If you don't follow the LLM's keyworded arguments rule, `typia.llm.parameters<Parameters>()` will throw compilation error like below.
 
 <Tabs items={["TypeScript Source Code", "Console Output"]}>
   <Tabs.Tab>
@@ -300,47 +281,43 @@ If you don't follow the LLM's keyworded arguments rule, `typia.llm.parameters<Pa
 import typia from "typia";
 
 typia.llm.parameters<string>();
-typia.llm.parameters<Record<string, boolean>, "chatgpt">();
+typia.llm.parameters<Record<string, boolean>>();
 typia.llm.parameters<Array<number>>();
 ```
   </Tabs.Tab>
   <Tabs.Tab>
 ```bash filename="Terminal"
-src/examples/llm.parameters.violation.ts:3:1 - error TS(typia.llm.parameters): unsupported type detected       
+src/examples/llm.parameters.violation.ts:3:1 - error TS(typia.llm.parameters): unsupported type detected
 
 - string
-  - LLM parameters must be an object type.        
+  - LLM parameters must be an object type.
 
-3 typia.llm.parameters<string, "chatgpt">();     
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~      
+3 typia.llm.parameters<string>();
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 src/examples/llm.parameters.violation.ts:3:22 - error TS2344: Type 'string' does not satisfy the constraint 'Record<string, any>'.
 
-3 typia.llm.parameters<string, "chatgpt">();     
+3 typia.llm.parameters<string>();
                        ~~~~~~
 
-src/examples/llm.parameters.violation.ts:4:1 - error TS(typia.llm.parameters): unsupported type detected       
+src/examples/llm.parameters.violation.ts:4:1 - error TS(typia.llm.parameters): unsupported type detected
 
 - Recordstringboolean
-  - LLM parameters must be an object type.        
+  - LLM parameters must be an object type.
 
 - Recordstringboolean
-  - LLM parameters must not have dynamic keys.   
-  - LLM schema of "gemini" does not support dynamic property in object.
+  - LLM parameters must not have dynamic keys.
 
-- Recordstringboolean: Recordstringboolean       
-  - LLM schema of "gemini" does not support dynamic property in object.
+4 typia.llm.parameters<Record<string, boolean>>();
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-4 typia.llm.parameters<Record<string, boolean>, "gemini">();
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-src/examples/llm.parameters.violation.ts:5:1 - error TS(typia.llm.parameters): unsupported type detected       
+src/examples/llm.parameters.violation.ts:5:1 - error TS(typia.llm.parameters): unsupported type detected
 
 - Arraynumber
-  - LLM parameters must be an object type.        
+  - LLM parameters must be an object type.
 
-5 typia.llm.parameters<Array<number>, "claude">();
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+5 typia.llm.parameters<Array<number>>();
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 Found 4 errors in the same file, starting at: src/examples/llm.parameters.violation.ts
