--- a/website/src/content/docs/llm/schema.mdx
+++ b/website/src/content/docs/llm/schema.mdx
@@ -15,37 +15,29 @@ import RemoteSource from "../../../components/RemoteSource";
     <code>ILlmSchema</code>,
   ]}>
   <Tabs.Tab>
-```typescript filename="typia" showLineNumbers {27-39}
+```typescript filename="typia" showLineNumbers {17-21}
 export namespace llm {
   // LLM FUNCTION CALLING APPLICATION SCHEMA
   export function application<
     App extends Record<string, any>,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
+    Config extends Partial<ILlmSchema.IConfig> = {},
   >(
-    options?: Partial<Pick<ILlmApplication.IOptions<Model>, "separate">>,
-  ): ILlmApplication<Model>;
+    config?: Partial<Pick<ILlmApplication.IConfig, "separate">>,
+  ): ILlmApplication;
 
   // STRUCTURED OUTPUT
   export function parameters<
     Parameters extends Record<string, any>,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
-  >(): ILlmSchema.ModelParameters[Model];
+    Config extends Partial<ILlmSchema.IConfig> = {},
+  >(): ILlmSchema.IParameters;
 
   // TYPE SCHEMA
   export function schema<
     T,
-    Model extends ILlmSchema.Model,
-    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
+    Config extends Partial<ILlmSchema.IConfig> = {},
   >(
-    ...$defs: Extract<
-      ILlmSchema.ModelSchema[Model],
-      { $ref: string }
-    > extends never
-      ? []
-      : [Record<string, ILlmSchema.ModelSchema[Model]>]
-  ): ILlmSchema.ModelSchema[Model];
+    $defs: Record<string, ILlmSchema>,
+  ): ILlmSchema;
 }
 ```
   </Tabs.Tab>
@@ -71,18 +63,9 @@ export namespace llm {
 
 Type schema in the LLM function calling application.
 
-`typia.llm.schema<T, Model>()` is a function generating type schema which is used in the LLM (Large Language Model) function calling application schema or structured output, especially composed by the [`typia.llm.parameters<Parameters, Model>()`](./parameters) and [`typia.llm.application<App, Model>()`](./application) functions. 
+`typia.llm.schema<T>()` is a function generating type schema which is used in the LLM (Large Language Model) function calling application schema or structured output, especially composed by the [`typia.llm.parameters<Parameters>()`](./parameters) and [`typia.llm.application<App>()`](./application) functions.
 
-Return value type `ILlmSchema` is similar with the JSON schema definition. However, its detailed specification becomes different by the LLM provider model you've chosen. Here is the list of LLM schema definitions of each model. Determine one of them carefully reading the LLM schema definitions.
-
-  - Supported schemas
-    - [`IChatGptSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IChatGptSchema.ts): OpenAI ChatGPT
-    - [`IClaudeSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IClaudeSchema.ts): Anthropic Claude
-    - [`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts): Google Gemini
-    - [`ILlamaSchema`](https://github.com/samchon/openapi/blob/master/src/structures/ILlamaSchema.ts): Meta Llama
-  - Midldle layer schemas
-    - [`ILlmSchemaV3`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3.ts): middle layer based on OpenAPI v3.0 specification
-    - [`ILlmSchemaV3_1`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3_1.ts): middle layer based on OpenAPI v3.1 specification
+Return value type `ILlmSchema` is similar with the JSON schema definition.
 
 <Callout type="info">
 **LLM Function Calling** and **Structured Output**
@@ -169,15 +152,15 @@ LLM schema does not support `bigint` type.
 
 LLM schema is based on the JSON schema definition of the OpenAPI v3.0 specification. Therefore, limitations of the JSON schema is also applied to the LLM schema, and the `bigint` type is not supported in the LLM function calling schema composition.
 
-Also, LLM schema does not support the tuple type, which is represented by the `OpenApi.IJsonSchema.ITuple` type. It's no LLM providers are supporting the tuple type, and such tuple type harms the separation option of the [`typia.llm.application<App, Model>()`](./application) function. If you need a tuple type, just change the tuple type to a regular object type instead.
+Also, LLM schema does not support the tuple type, which is represented by the `OpenApi.IJsonSchema.ITuple` type. It's no LLM providers are supporting the tuple type, and such tuple type harms the separation option of the [`typia.llm.application<App>()`](./application) function. If you need a tuple type, just change the tuple type to a regular object type instead.
 
 <Tabs items={["TypeScript Source Code", "Console Output"]}>
   <Tabs.Tab>
 ```typescript filename="src/examples/llm.schema.bigint-and-tuple.ts" showLineNumbers
 import typia from "typia";
 
-typia.llm.schema<bigint, "chatgpt">({});
-typia.llm.schema<[number, string], "claude">({});
+typia.llm.schema<bigint>({});
+typia.llm.schema<[number, string]>({});
 ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -187,22 +170,20 @@ src/examples/llm.schema.bigint-and-tuple.ts:3:1 - error TS(typia.llm.schema): un
 - bigint
   - LLM schema does not support bigint type.
 
-3 typia.llm.schema<bigint, "chatgpt">({});
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3 typia.llm.schema<bigint>({});
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 src/examples/llm.schema.bigint-and-tuple.ts:4:1 - error TS(typia.llm.schema): failed to convert JSON schema to LLM schema.
 
   - $input.schema: LLM does not allow tuple type.
 
-4 typia.llm.schema<[number, string], "claude">({});
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+4 typia.llm.schema<[number, string]>({});
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```
   </Tabs.Tab>
 </Tabs>
 
-If you're using Google Gemini ([`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts)) or middle layer schema of [`ILlmSchemaV3`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3.ts), they do not support the reference type that is embodied by the `OpenApi.IJsonSchema.IReference` type with `$ref` property. Therefore, if recursive type comes, no way to express it perfectly in those [`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts) and [`ILlmSchemaV3`](https://github.com/samchon/openapi/blob/master/src/structures/ILlmSchemaV3.ts). They just repeat the recursive structure 3 times, and remove the recursive type after the 4 depths.
-
-For reference, if the recursive type comes from the array type, it would be zero length array type at the fourth step. Otherwise the recursive type comes from a property and the property is optional, the 4th property would be removed from the object type. At last, if the recursive type is combined as an `oneOf` type, the type would be removed from there.
+For reference, if recursive type comes from the array type, it would be repeated 3 times, and at the fourth step the recursive type would be removed. If the recursive type comes from a property and the property is optional, the 4th property would be removed from the object type. At last, if the recursive type is combined as an `oneOf` type, the type would be removed from there.
 
 <Tabs items={["TypeScript Source Code", "Compiled JavaScript File"]}>
   <Tabs.Tab>
@@ -219,9 +200,9 @@ For reference, if the recursive type comes from the array type, it would be zero
   </Tabs.Tab>
 </Tabs>
 
-And OpenAI ChatGPT ([`IChatGptSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IChatGptSchema.ts)) and Google Gemini ([`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts)) do not support the `OpenApi.IJsonSchema.IObject.additionalProperties` type, which represent the dynamic key typed object like `Record<string, T>` type in the TypeScript. Therefore, if you put the dynamic `Record<string, T>` type like below, `typia.llm.schema<T, "chatgpt">()` and `typia.llm.schema<T, "gemini">` functions throw the compilation error like below.
+Also, `typia.llm.schema<T>()` does not support the `OpenApi.IJsonSchema.IObject.additionalProperties` type, which represent the dynamic key typed object like `Record<string, T>` type in the TypeScript. Therefore, if you put the dynamic `Record<string, T>` type like below, `typia.llm.schema<T>()` function throw the compilation error like below.
 
-Therefore, if you want to utilzie OpenAI hatGPT ([`IChatGptSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IChatGptSchema.ts)) or Google Gemini ([`IGeminiSchema`](https://github.com/samchon/openapi/blob/master/src/structures/IGeminiSchema.ts)), you have to change the `Record<string, T>` type to an array of regular object type like below. Note that, as LLM providers do not support the `tuple` type, you don't have to define the array type containing the tuple type.
+Therefore, you have to change the `Record<string, T>` type to an array of regular object type like below. Note that, as LLM providers do not support the `tuple` type, you don't have to define the array type containing the tuple type.
 
   - recommended: `Array<{ key: string, value: T }>`
   - not recommended: `Array<[string, T]>`
@@ -231,8 +212,7 @@ Therefore, if you want to utilzie OpenAI hatGPT ([`IChatGptSchema`](https://gith
 ```typescript filename="src/examples/llm.schema.additionalProperties.ts" showLineNumbers
 import typia from "typia";
 
-typia.llm.schema<Record<string, number>, "chatgpt">({});
-typia.llm.schema<Record<string, number>, "gemini">();
+typia.llm.schema<Record<string, number>>({});
 ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -240,24 +220,13 @@ typia.llm.schema<Record<string, number>, "gemini">();
 src/examples/llm.schema.additionalProperties.ts:3:1 - error TS(typia.llm.schema): unsupported type detected
 
 - Recordstringnumber
-  - LLM schema of "chatgpt" does not support dynamic property in object.  
+  - LLM schema does not support dynamic property in object.
 
 - Recordstringnumber: Recordstringnumber
-  - LLM schema of "chatgpt" does not support dynamic property in object.  
+  - LLM schema does not support dynamic property in object.
 
-3 typia.llm.schema<Record<string, number>, "chatgpt">({});
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-src/examples/llm.schema.additionalProperties.ts:4:1 - error TS(typia.llm.schema): unsupported type detected
-
-- Recordstringnumber
-  - LLM schema of "gemini" does not support dynamic property in object.   
-
-- Recordstringnumber: Recordstringnumber
-  - LLM schema of "gemini" does not support dynamic property in object.   
-
-4 typia.llm.schema<Record<string, number>, "gemini">();
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3 typia.llm.schema<Record<string, number>>({});
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```
   </Tabs.Tab>
 </Tabs>
