--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -157,3 +157,8 @@ Also, `typia` is re-distributing half of donations to core contributors of `typi
   - [`ryoppippi/unplugin-typia`](https://github.com/ryoppippi/unplugin-typia)
 
 [![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
+
+## References
+
+  - inspired by [`typescript-is`](https://github.com/woutervh-/typescript-is)
+  - inspired by [`ts-patch`](https://github.com/nonara/ts-patch)
