fix broken links

--- a/website/src/content/docs/llm/parameters.mdx
+++ b/website/src/content/docs/llm/parameters.mdx
@@ -96,7 +96,7 @@ Structured output is another feature of LLM. The "structured output" means that 
   </Tabs.Tab>
 </Tabs>
 
-[📖 Playground Link](https://typia.io/playground/?script=JYWwDg9gTgLgBAbzgSQDIBsQGUDGALAUxAEM4BfOAMyghDgCIABAZ2JHwgDsB6CMAzsTDB6AbgBQoSLDgwAnsOIAaRLOIBzZuSo069eYrHi4kzjAJRKxHARQBZIgCMLiY3CLFg6AFxxmMKGBOdTgAMjVNADoAMWgSGAAeeg8vegA+CTg4QRACX39A4My4DTzsgFcQZyhivAhHR2ACZnyAoPUAbQBdYoArCCCCABMAfWIYVsKQ8JgNZhi48aSh8YJ0iTJxHC5-ODBfNExcQhJI5AAFYig2AnMoLQBeWQVgYkj0TEiwK5u75gTkA4qhY0gAKACUEm2nGYEHQBHeEHUoLAkKAA)
+[📖 Playground Link](/playground/?script=JYWwDg9gTgLgBAbzgSQDIBsQGUDGALAUxAEM4BfOAMyghDgCIABAZ2JHwgDsB6CMAzsTDB6AbgBQoSLDgwAnsOIAaRLOIBzZuSo069eYrHi4kzjAJRKxHARQBZIgCMLiY3CLFg6AFxxmMKGBOdTgAMjVNADoAMWgSGAAeeg8vegA+CTg4QRACX39A4My4DTzsgFcQZyhivAhHR2ACZnyAoPUAbQBdYoArCCCCABMAfWIYVsKQ8JgNZhi48aSh8YJ0iTJxHC5-ODBfNExcQhJI5AAFYig2AnMoLQBeWQVgYkj0TEiwK5u75gTkA4qhY0gAKACUEm2nGYEHQBHeEHUoLAkKAA)
 
 ## Structured Output
 
@@ -269,7 +269,7 @@ In that case, if you give validation feedback from `ILlmFunction.validate()` fun
 
 ## Restrictions
 
-`typia.llm.parameters<Parameters>()` follows the same restrictions [`typia.llm.schema<T>()`](./schema) function. Also, it has only one additional restriction; the keyworded argument.
+`typia.llm.parameters<Parameters>()` follows the same restrictions [`typia.llm.schema<T>()`](../schema) function. Also, it has only one additional restriction; the keyworded argument.
 
 In the LLM function calling and structured output, the parameters must be a keyworded object type with static keys without any dynamic keys. Also, the object type must not be nullable or optional.
 
