--- a/website/src/content/docs/validators/assert.mdx
+++ b/website/src/content/docs/validators/assert.mdx
@@ -267,11 +267,11 @@ Also, with those tags, you can add your custom validation logic, too.
 
 If you want to know about such special tags detaily, read below article:
 
-  - [Special Tags](./tags/)
-    - [Outline](./tags/#outline)
-    - [Type Tags](./tags/#type-tags)
-    - [Comment Tags](./tags/#comment-tags)
-    - [Customization](./tags/#customization)
+  - [Special Tags](../tags/)
+    - [Outline](../tags/#outline)
+    - [Type Tags](../tags/#type-tags)
+    - [Comment Tags](../tags/#comment-tags)
+    - [Customization](../tags/#customization)
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
