--- a/website/src/content/docs/random.mdx
+++ b/website/src/content/docs/random.mdx
@@ -92,9 +92,9 @@ export function createRandom<T>(): (g?: IRandomGenerator) => Resolved<T>;
 
 ## Special Tags
 
-Runtime validators of `typia` provides additional type checking logic through [Type Tags](./validators/tags#type-tags) and [Comment Tags](./validators/tags#comment-tags). `typia.random<T>()` function also like that. `typia.random<T>()` function can utilize those tags to specialize the behavior of random data generation.
+Runtime validators of `typia` provides additional type checking logic through [Type Tags](../validators/tags#type-tags) and [Comment Tags](../validators/tags#comment-tags). `typia.random<T>()` function also like that. `typia.random<T>()` function can utilize those tags to specialize the behavior of random data generation.
 
-For reference, whether you choose [Type Tags](./validators/tags#type-tags) or [Comment Tags](./validators/tags#comment-tags). `typia.random<T>()`, it is not a matter for `typia.random<T>()` function. Below two TypeScript codes are generating exactly same JavaScript code. Therefore, you can choose whatever you want considering your preference.
+For reference, whether you choose [Type Tags](../validators/tags#type-tags) or [Comment Tags](../validators/tags#comment-tags). `typia.random<T>()`, it is not a matter for `typia.random<T>()` function. Below two TypeScript codes are generating exactly same JavaScript code. Therefore, you can choose whatever you want considering your preference.
 
 <Tabs items={[
   'TypeScript (Type Tags)', 
@@ -160,7 +160,7 @@ As above `IRandomGenerator.CustomMap` has a little bit complicate type, it may h
 
 Just define custom type tags like below, then everything would be done. 
 
-For reference, when defining custom type tag, `typia` enforces user to define `validate` function literal for type safety. Never forget it when you define custom type tags for random generation. Such validation logic definition may enhance your random data generator logic when combining with [`typia.assert<T>()`](./validators/assert) function.
+For reference, when defining custom type tag, `typia` enforces user to define `validate` function literal for type safety. Never forget it when you define custom type tags for random generation. Such validation logic definition may enhance your random data generator logic when combining with [`typia.assert<T>()`](../validators/assert) function.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
